added nnettools to marabou image, and fixed build issues

--- a/docker/marabou/Dockerfile
+++ b/docker/marabou/Dockerfile
@@ -6,13 +6,16 @@ ARG USER=ubuntu
 ARG HOME=/home/${USER}
 ARG MARABOU_PATH=${HOME}/.bin/marabou
 ARG MARABOU_URL=https://github.com/NeuralNetworkVerification/Marabou/archive/master.zip
+ARG NNET_TOOLS_PATH=${HOME}/.bin/nnet_tools
+ARG NNET_TOOLS_URL=https://github.com/sisl/NNet/archive/master.zip
 
 # Environment variables
 ENV HOME=${HOME}
 ENV USER=${USER}
 ENV MARABOU_PATH=${MARABOU_PATH}
-ENV PYTHONPATH="${PYTHONPATH}:${MARABOU_PATH}"
-ENV JUPYTER_PATH="${JUPYTER_PATH}:${MARABOU_PATH}"
+ENV NNET_TOOLS_PATH=${NNET_TOOLS_PATH}
+ENV PYTHONPATH="${PYTHONPATH}:${MARABOU_PATH}:${NNET_TOOLS_PATH}"
+ENV JUPYTER_PATH="${JUPYTER_PATH}:${MARABOU_PATH}:${NNET_TOOLS_PATH}"
 ENV TERM="xterm"
 
 # Install apt packages
@@ -36,15 +39,20 @@ RUN ln -s /usr/bin/pip3 /usr/local/bin/pip
 RUN pip3 install --no-cache-dir --upgrade pip
 
 # Install python packages
-RUN pip3 install --no-cache-dir pybind11 numpy tensorflow pandas
+RUN pip3 install --no-cache-dir pybind11 pytest numpy tensorflow pandas
 RUN pip3 install --no-cache-dir onnx onnxruntime
 
 # Download, unzip, build, and setup marabou
 RUN cd /tmp && wget -q -O marabou.zip ${MARABOU_URL} &&  \
     unzip -q marabou.zip && mv Marabou-master ${MARABOU_PATH} && rm -rf marabou.zip
 RUN cd ${MARABOU_PATH} && mkdir build
-RUN cd ${MARABOU_PATH}/build && cmake .. && cmake --build .
+RUN cd ${MARABOU_PATH}/build && cmake .. -DBUILD_PYTHON=ON && cmake --build .
 RUN chown -R ${USER}:${USER} $MARABOU_PATH
+
+# Download, unzip, and setup nnet_tools
+RUN cd /tmp && wget -q -O nnet_tools.zip ${NNET_TOOLS_URL} &&  \
+    unzip -q nnet_tools.zip && mv NNet-master ${NNET_TOOLS_PATH} && rm -rf nnet_tools.zip
+RUN chown -R ${USER}:${USER} $NNET_TOOLS_PATH
 
 # Configure default user, cwd, and shell for docker
 USER ${USER}
