--- a/docker/scad_tot/Dockerfile
+++ b/docker/scad_tot/Dockerfile
@@ -2,11 +2,13 @@
 FROM grese/marabou:latest
 
 # Docker arguments
+ARG MARABOU_USER=marabou
+ARG MARABOU_HOME=/home/marabou
 ARG SCAD_TOT_URL=https://github.com/grese/scad_tot.git
-ARG SCAD_TOT_PATH=${HOME}/scad_tot
+ARG SCAD_TOT_PATH=${MARABOU_HOME}/scad_tot
 
 # Environment variables
 ENV SCAD_TOT_PATH=${SCAD_TOT_PATH}
 
 # Download and install scad_tot project
-RUN cd ${HOME} && git clone ${SCAD_TOT_URL} && chown -R ${USER}:${USER} ${SCAD_TOT_PATH}
+RUN cd ${MARABOU_HOME} && git clone ${SCAD_TOT_URL} && chown -R ${MARABOU_USER}:${NB_GROUP} ${SCAD_TOT_PATH}
