added data to scad_tot, and download data script

--- a/docker/scad_tot/Dockerfile
+++ b/docker/scad_tot/Dockerfile
@@ -7,6 +7,7 @@ ARG MARABOU_HOME=/home/marabou
 ARG SCAD_TOT_URL=https://github.com/grese/scad_tot/archive/master.zip
 ARG SCAD_TOT_PATH=${MARABOU_HOME}/scad_tot
 ARG SCAD_TOT_IGNORE='docker docs'
+ARG SCAD_TOT_DATA_URL=https://drive.google.com/file/d/1KkoEaLUsmV916TO9FOAuGmN_uy2o9e-t
 
 # Environment variables
 ENV NB_USER=${MARABOU_USER}
@@ -19,3 +20,6 @@ RUN rm -rf ${MARABOU_HOME}/work
 RUN cd /tmp && wget -q -O scad_tot.zip ${SCAD_TOT_URL} && unzip -q scad_tot.zip \
     && mv scad_tot-master ${SCAD_TOT_PATH} && rm -rf scad_tot.zip
 RUN cd ${SCAD_TOT_PATH} && rm -rf ${SCAD_TOT_IGNORE}
+
+# download scad data
+RUN mkdir -p ${SCAD_TOT_PATH}/data && wget -q -O ${SCAD_TOT_PATH}/data/data.csv ${SCAD_TOT_DATA_URL}
