--- a/docker/scad_tot/Dockerfile
+++ b/docker/scad_tot/Dockerfile
@@ -4,6 +4,7 @@ FROM grese/marabou:latest
 # Docker arguments
 ARG MARABOU_USER=marabou
 ARG MARABOU_HOME=/home/marabou
+ARG NB_GROUP=users
 ARG SCAD_TOT_URL=https://github.com/grese/scad_tot/archive/master.zip
 ARG SCAD_TOT_PATH=${MARABOU_HOME}/scad_tot
 ARG SCAD_TOT_IGNORE='docker docs'
@@ -23,3 +24,6 @@ RUN cd ${SCAD_TOT_PATH} && rm -rf ${SCAD_TOT_IGNORE}
 
 # download scad data
 RUN mkdir -p ${SCAD_TOT_PATH}/data && wget -q -O ${SCAD_TOT_PATH}/data/data.csv ${SCAD_TOT_DATA_URL}
+
+# fix permissions
+RUN chown -R ${MARABOU_USER}:${NB_GROUP} ${SCAD_TOT_PATH}
