added data download

--- a/docker/scad_tot/Dockerfile
+++ b/docker/scad_tot/Dockerfile
@@ -8,7 +8,7 @@ ARG NB_GROUP=users
 ARG SCAD_TOT_URL=https://github.com/grese/scad_tot/archive/master.zip
 ARG SCAD_TOT_PATH=${MARABOU_HOME}/scad_tot
 ARG SCAD_TOT_IGNORE='docker docs'
-ARG SCAD_TOT_DATA_URL=https://drive.google.com/file/d/1KkoEaLUsmV916TO9FOAuGmN_uy2o9e-t
+ARG SCAD_TOT_DATA_URL=https://drive.google.com/uc?authuser=0&export=download&id=1KkoEaLUsmV916TO9FOAuGmN_uy2o9e-t
 
 # Environment variables
 ENV NB_USER=${MARABOU_USER}
