updated marabou image and readme

--- a/docker/marabou/Dockerfile
+++ b/docker/marabou/Dockerfile
@@ -38,8 +38,9 @@ RUN mv /home/${OLD_USER} ${MARABOU_HOME}
 RUN usermod ${OLD_USER} -l ${MARABOU_USER} -d ${MARABOU_HOME} -s /bin/zsh -g ${NB_GROUP} -G sudo && echo "${MARABOU_USER} ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers
 RUN rm -rf /home/${OLD_USER}
 # update .bashrc
-RUN echo "export PYTHONPATH=$PYTHONPATH:$MARABOU_PATH" >> ${MARABOU_HOME}/.bashrc
-RUN echo "export JUPYTER_PATH=$JUPYTER_PATH:$MARABOU_PATH" >> ${MARABOU_HOME}/.bashrc
+RUN echo "export PYTHONPATH=\$PYTHONPATH:\$MARABOU_PATH" >> ${MARABOU_HOME}/.bashrc
+RUN echo "export JUPYTER_PATH=\$JUPYTER_PATH:\$MARABOU_PATH" >> ${MARABOU_HOME}/.bashrc
+RUN echo "marabou() { \$MARABOU_PATH/build/Marabou \"\$@\"; }" >> ${MARABOU_HOME}/.bashrc
 
 # make marabou directory and copy folders
 RUN mkdir -p ${MARABOU_HOME}/.bin
