jupyterlab and zsh default
* added SERVER_MODE environment variable to support LabApp and NotebookApp
* set default SERVER_MODE to LabApp
* setting terminado_settings.shell_command to zsh instead of bash
* renamed startup script

--- a/docker/marabou/Dockerfile
+++ b/docker/marabou/Dockerfile
@@ -21,6 +21,7 @@ ENV MARABOU_PATH=${MARABOU_PATH}
 ENV NNET_PATH=${NNET_PATH}
 ENV PYTHONPATH="$PYTHONPATH:$MARABOU_PATH:$NNET_PATH"
 ENV JUPYTER_PATH="$JUPYTER_PATH:$MARABOU_PATH:$NNET_PATH"
+ENV SERVER_MODE="lab"
 ENV SERVER_TOKEN=""
 ENV SERVER_CERTFILE=""
 ENV SERVER_KEYFILE=""
@@ -31,7 +32,7 @@ USER root
 # Install aptitude dependencies
 RUN export DEBIAN_FRONTEND=noninteractive && apt-get update -y \
     && apt-get install -y build-essential libssl-dev protobuf-compiler libprotoc-dev \
-    && apt-get install -y zsh zip wget cmake && apt-get install -y libboost-all-dev python3-dev
+    && apt-get install -y zsh zip vim wget cmake && apt-get install -y libboost-all-dev python3-dev
 
 # Create and configure user account (TODO: require password for sudo)
 RUN mv /home/${OLD_USER} ${MARABOU_HOME}
@@ -41,13 +42,15 @@ RUN rm -rf /home/${OLD_USER}
 RUN echo "export PYTHONPATH=\$PYTHONPATH:\$MARABOU_PATH" >> ${MARABOU_HOME}/.bashrc
 RUN echo "export JUPYTER_PATH=\$JUPYTER_PATH:\$MARABOU_PATH" >> ${MARABOU_HOME}/.bashrc
 RUN echo "marabou() { \$MARABOU_PATH/build/Marabou \"\$@\"; }" >> ${MARABOU_HOME}/.bashrc
+# add some settings
+RUN echo "\nc.NotebookApp.terminado_settings={'shell_command':['/bin/zsh']}\n" >> /etc/jupyter/jupyter_notebook_config.py
 
 # make marabou directory and copy folders
 RUN mkdir -p ${MARABOU_HOME}/.bin
 COPY ./shell/git-prompt.sh ${MARABOU_HOME}/.bin/git-prompt.sh
 COPY ./shell/zshrc ${MARABOU_HOME}/.zshrc
-COPY ./start_server.sh /usr/local/bin
-RUN chmod +x /usr/local/bin/start_server.sh
+COPY ./startup.sh /usr/local/bin
+RUN chmod +x /usr/local/bin/startup.sh
 
 # Upgrade pip and install packages
 RUN pip install --no-cache-dir --upgrade pip
@@ -68,4 +71,4 @@ RUN chown -R ${MARABOU_USER}:${NB_GROUP} ${MARABOU_HOME}
 
 # set cwd, and set default startup command
 WORKDIR ${MARABOU_HOME}
-CMD /usr/local/bin/start_server.sh
+CMD /usr/local/bin/startup.sh
