--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,9 @@ attrs==19.3.0
 backcall==0.1.0
 bleach==3.1.4
 cachetools==4.1.0
-certifi==2020.4.5.1
+certifi==2020.6.20
 chardet==3.0.4
+cycler==0.10.0
 decorator==4.4.2
 defusedxml==0.6.0
 entrypoints==0.3
@@ -36,9 +37,11 @@ jupyter-core==4.6.3
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
 keras2onnx==1.6.5
+kiwisolver==1.2.0
 lazy-object-proxy==1.4.3
 Markdown==3.2.1
 MarkupSafe==1.1.1
+matplotlib==3.3.2
 mccabe==0.6.1
 mistune==0.8.4
 nbconvert==5.6.1
@@ -55,6 +58,8 @@ pandocfilters==1.4.2
 parso==0.7.0
 pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==7.2.0
+plotly==4.11.0
 prometheus-client==0.7.1
 prompt-toolkit==3.0.5
 protobuf==3.11.3
@@ -64,6 +69,7 @@ pyasn1-modules==0.2.8
 pybind11==2.5.0
 Pygments==2.6.1
 pylint==2.6.0
+pyparsing==2.4.7
 pyrsistent==0.16.0
 python-dateutil==2.8.1
 pytz==2019.3
@@ -72,9 +78,11 @@ qtconsole==4.7.3
 QtPy==1.9.0
 requests==2.23.0
 requests-oauthlib==1.3.0
+retrying==1.3.3
 rsa==4.0
 scikit-learn==0.22.2.post1
 scipy==1.4.1
+seaborn==0.11.0
 Send2Trash==1.5.0
 six==1.14.0
 sklearn==0.0
